test/syc/bad/restrictnp.c
/*
 * Restrict applied to non-pointer type.
 */

restrict int ri;
